change XDG_APPS_DIR -> XDG_APPS_INSTALL_DIR, XDG_DIRECTORY_DIR->XDG_DIRECTORY_INSTALL_DIR, DBUS_INTERFACES_DIR->DBUS_INTERFACES_INSTALL_ DIR, DBUS_SERVICES_DIR->DBUS_SERVICES_INSTALL_DIR to have same naming convention as discussed with Alex.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=691233

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -406,7 +406,7 @@ install(TARGETS umbrello DESTINATION ${BIN_INSTALL_DIR} )
 
 ########### install files ###############
 
-install( FILES umbrello.desktop  DESTINATION  ${XDG_APPS_DIR} )
+install( FILES umbrello.desktop  DESTINATION  ${XDG_APPS_INSTALL_DIR} )
 install( FILES
   umbrelloui.rc
   docgenerators/xmi2docbook.xsl
