SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=696511

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -37,7 +37,7 @@ GenericName[nl]=UML-modeller
 GenericName[nn]=UML-modelleringsprogram
 GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
-GenericName[pt_BR]=Modelador UML
+GenericName[pt_BR]=Modelador de UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=UML моделар
