Docgenerators are now multi threaded. No blocking for long durations ( atleast on my dead processor and connection :P ) anymore.
Some more testing due :)

svn path=/trunk/KDE/kdesdk/umbrello/; revision=698390

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -109,7 +109,10 @@ kde4_add_ui_files(  libcodegenerator_SRCS
 
 set(libdocgenerator_SRCS
     docgenerators/docbookgenerator.cpp 
-    docgenerators/xhtmlgenerator.cpp)
+    docgenerators/docbookgeneratorjob.cpp
+    docgenerators/xhtmlgenerator.cpp    
+    docgenerators/docbook2xhtmlgeneratorjob.cpp
+)
 
 
 set(libdialogs_SRCS
