--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Type=Application
 Exec=umbrello -caption "%c"
 Icon=umbrello
-DocPath=umbrello/index.html
+X-DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
 Name[ne]=अम्ब्रेलो
