SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=714635

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -48,5 +48,6 @@ GenericName[tg]=Воситаи UML моделкунонӣ
 GenericName[tr]=UML Modelleyici
 GenericName[uk]=Засіб моделювання UML
 GenericName[x-test]=xxUML Modellerxx
+GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml;
 Categories=Qt;KDE;Development;
