--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -19,6 +19,7 @@ GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
 GenericName[el]=Μοντελοποιητής UML
+GenericName[eo]=UML-Modelilo 
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[eu]=UML modelatzailea
