changing kde4_add_win32_icon acc. to the hints of alex neundorf. CCMAIL: neundorf@kde.org
svn path=/trunk/KDE/kdesdk/umbrello/; revision=736285

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -398,7 +398,7 @@ if (WIN32)
         ${CMAKE_CURRENT_SOURCE_DIR}/hi64-app-umbrello.png 
         ${CMAKE_CURRENT_SOURCE_DIR}/hi128-app-umbrello.png 
     )
-    kde4_add_win32_app_icon(umbrello umbrello_SRCS ${umbrello_icons})
+    kde4_add_win32_app_icon(umbrello_SRCS ${umbrello_icons})
 
 else (WIN32)
     set (LIBS )
