--- a/umbrello/pics/CMakeLists.txt
+++ b/umbrello/pics/CMakeLists.txt
@@ -1,6 +1,5 @@
 
-install( FILES actor.png  aggregation.png  align_left.png  align_right.png  align_top.png  align_bottom.png  
-align_vert_middle.png  align_hori_middle.png  align_vert_distribute.png  align_hori_distribute.png  anchor.png  
+install( FILES actor.png  aggregation.png  align-horizontal-left.png  align-horizontal-right.png  align-vertical-top.png  align-vertical-bottom.png  align-vertical-center.png  align-horizontal-center.png  distribute-vertical.png  distribute-horizontal.png  anchor.png  
 andline.png  arrow.png  association.png  choice-rhomb.png  choice-round.png  combined_fragment.png  component.png  region.png  composition.png  containment.png  CVglobal_meth.png  CVglobal_var.png  CVimplementation_meth.png  
 CVimplementation_signal.png  CVimplementation_slot.png  CVimplementation_var.png  CVnamespace.png  
 CVprivate_meth.png  CVprivate_signal.png  CVprivate_slot.png  CVprivate_var.png  CVprotected_meth.png  
