--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -40,6 +40,7 @@ GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
 GenericName[pt_BR]=Modelador de UML
 GenericName[ru]=Средство UML моделирования
+GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=UML моделар
 GenericName[sr@latin]=UML modelar
