SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=751971

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -26,6 +26,7 @@ GenericName[fa]=مدل‌ساز UML
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[ga]=Múnlóir UML
+GenericName[gl]=Modelador de UML
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
