SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=756423

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -31,6 +31,7 @@ GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
 GenericName[kk]=UML үлгілегіші
+GenericName[lv]=UML modelētājs
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
