SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=764651

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -32,6 +32,7 @@ GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
 GenericName[kk]=UML үлгілегіші
 GenericName[lv]=UML modelētājs
+GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
 GenericName[ne]=यूएमएल मोडेलर
@@ -49,6 +50,7 @@ GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[tg]=Воситаи UML моделкунонӣ
 GenericName[tr]=UML Modelleyici
+GenericName[uk]=Pemodel UML
 GenericName[x-test]=xxUML Modellerxx
 GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml;
