Do you want to use boost? Turn exceptions on :-)
This doesn't compile yet. Boost headers aren't self-contained.

svn path=/trunk/KDE/kdesdk/umbrello/; revision=789285

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -409,6 +409,9 @@ set (umbrello_SRCS
 	${libumbrello_SRCS}
 )
 
+# Some Boost require exceptions
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  ${KDE4_ENABLE_EXCEPTIONS}")
+
 kde4_add_app_icon(umbrello_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/hi*-app-umbrello.png")
 kde4_add_executable(umbrello ${umbrello_SRCS})
 target_link_libraries(umbrello  ${LIBS} ${KDE4_KFILE_LIBS} ${KDE4_KDE3SUPPORT_LIBS} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES} ${LIBUUID} )
