SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=809524

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -32,6 +32,7 @@ GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
+GenericName[ka]=UML მოდელერი
 GenericName[kk]=UML үлгілегіші
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
