--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -28,6 +28,7 @@ Comment[hu]=Umbrello UML-fájl
 Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore UML Umbrello
 Comment[ja]=Umbrello UML モデラーファイル
+Comment[ka]=Umbrello UML მოდელერის ფაილი
 Comment[kk]=Umbrello UML үлгілегішінің файлы
 Comment[lt]=Umbrello UML Modeller byla
 Comment[ms]=Fail Pemodel Umbrello UML
