--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,6 +9,7 @@ Terminal=false
 Name=Umbrello
 Name[ne]=अम्ब्रेलो
 Name[pa]=ਉਮਬਰਿੱਲਓ
+Name[sr]=Умбрело
 Name[ta]=  அம்ரல்லோ
 Name[x-test]=xxUmbrelloxx
 GenericName=UML Modeller
@@ -44,7 +45,7 @@ GenericName[pt_BR]=Modelador de UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
-GenericName[sr]=UML моделар
+GenericName[sr]=УМЛ моделар
 GenericName[sr@latin]=UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
