A new class NewUMLWidget added which will be the main base widget class for all the UMLWidgets. CCMAIL:uml-devel@lists.sourceforge.net
svn path=/branches/work/soc-umbrello/; revision=819703

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -298,6 +298,7 @@ set(libumbrello_SRCS
    messagewidget.cpp
    messagewidgetcontroller.cpp
    model_utils.cpp
+   newumlwidget.cpp
    node.cpp
    nodewidget.cpp
    notewidget.cpp
