1) First version of NewUMLRectWidget added providing flexibilty to create rectangular widgets. 2) NewEnumWidget becomes first widget to be ported to NewUMLRectWidget, which now supports gradients. 3) Converted widget::draw methods to widget::paint so that QGraphicsItem::paint is reimplemented.    This move allows most of widgets to be added to diagram and shown.
CCMAIL:uml-devel@lists.sourceforge.net


svn path=/branches/work/soc-umbrello/; revision=820584

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -298,7 +298,9 @@ set(libumbrello_SRCS
    messagewidget.cpp
    messagewidgetcontroller.cpp
    model_utils.cpp
+   newenumwidget.cpp
    newumlwidget.cpp
+   newumlrectwidget.cpp
    node.cpp
    nodewidget.cpp
    notewidget.cpp
