1) Moved resizing code into a flexible WidgetHandle class which is derived from QGraphicsItem. 2) Added some tests for the New* classes. (had forgotton previously to svn add) 3) Initial version of TextItem classs is added, a class designed to be used by almost all widgets dispalying text.
CCMAIL:uml-devel@lists.sourceforge.net

svn path=/branches/work/soc-umbrello/; revision=825511

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -326,6 +326,7 @@ set(libumbrello_SRCS
    signalwidget.cpp
    stereotype.cpp
    template.cpp
+   textitem.cpp
    test.cpp
    textblock.cpp
    toolbarstate.cpp
@@ -360,6 +361,7 @@ set(libumbrello_SRCS
    uniqueconstraint.cpp
    usecase.cpp
    usecasewidget.cpp
+   widgethandle.cpp
    widgetbase.cpp
    widget_factory.cpp
    widget_utils.cpp
