Added TextItemGroup class which helps in managing and aligning TextItems. Also some documentation fixes and some of them have been moved to their correponding source file. SVN_SILENT:
svn path=/branches/work/soc-umbrello/; revision=829439

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -327,6 +327,7 @@ set(libumbrello_SRCS
    stereotype.cpp
    template.cpp
    textitem.cpp
+   textitemgroup.cpp
    test.cpp
    textblock.cpp
    toolbarstate.cpp
