Uml::setProgLangAction(): Remove the connect() hack. Do the connect outside.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=834375

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -55,24 +55,24 @@
     <Action name="generation_wizard"/>
     <Action name="generate_all"/>
     <Menu name="active_lang_menu"><text>Active &amp;Language</text>
-      <Action name="set_lang_actionscript"/>
-      <Action name="set_lang_ada"/>
-      <Action name="set_lang_cpp"/>
-      <Action name="set_lang_csharp"/>
-      <Action name="set_lang_d"/>
-      <Action name="set_lang_idl"/>
-      <Action name="set_lang_java"/>
-      <Action name="set_lang_javascript"/>
-      <Action name="set_lang_mysql"/>
-      <Action name="set_lang_pascal"/>
-      <Action name="set_lang_perl"/>
-      <Action name="set_lang_php"/>
-      <Action name="set_lang_php5"/>
-      <Action name="set_lang_postgresql"/>
-      <Action name="set_lang_python"/>
-      <Action name="set_lang_ruby"/>
-      <Action name="set_lang_tcl"/>
-      <Action name="set_lang_xmlschema"/>
+      <Action name="setLang_actionscript"/>
+      <Action name="setLang_ada"/>
+      <Action name="setLang_cpp"/>
+      <Action name="setLang_csharp"/>
+      <Action name="setLang_d"/>
+      <Action name="setLang_idl"/>
+      <Action name="setLang_java"/>
+      <Action name="setLang_javascript"/>
+      <Action name="setLang_mysql"/>
+      <Action name="setLang_pascal"/>
+      <Action name="setLang_perl"/>
+      <Action name="setLang_php"/>
+      <Action name="setLang_php5"/>
+      <Action name="setLang_postgresql"/>
+      <Action name="setLang_python"/>
+      <Action name="setLang_ruby"/>
+      <Action name="setLang_tcl"/>
+      <Action name="setLang_xmlschema"/>
     </Menu>
     <Separator/>
     <Action name="create_default_datatypes"/>
