Ported FloatingTextWidget using TextItems. TODO : Add constraints checking.
svn path=/branches/work/soc-umbrello/; revision=842108

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -311,7 +311,7 @@ set(libumbrello_SRCS
    enumwidget.cpp
    floatingdashlinewidget.cpp
    floatingtextwidget.cpp
-   floatingtextwidgetcontroller.cpp
+#   floatingtextwidgetcontroller.cpp
    folder.cpp
    foreignkeyconstraint.cpp
    forkjoinwidget.cpp
