Implemented ExpanderBox item(plus/minus box) which reacts to mouse click to toggle the expansion state.
The ClassifierWidget now adopts this ExpanderBox to allow user to
hide/show the attributes and operations.

This in my opinion eases user experience but this probably should be
configurable in future.


svn path=/branches/work/soc-umbrello/; revision=844084

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -309,6 +309,7 @@ set(libumbrello_SRCS
    enum.cpp
    enumliteral.cpp
    enumwidget.cpp
+   expanderbox.cpp
    floatingdashlinewidget.cpp
    floatingtextwidget.cpp
 #   floatingtextwidgetcontroller.cpp
