First towards AssociationWidget port.
svn path=/branches/work/soc-umbrello/; revision=869819

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -345,6 +345,7 @@ set(libumbrello_SRCS
     main.cpp
     messagewidget.cpp
     model_utils.cpp
+    newassociationwidget.cpp
     newlinepath.cpp
     node.cpp
     nodewidget.cpp
