use a newline after toolbar, use icons only for worktoolbar as discussed with Celeste
svn path=/trunk/KDE/kdesdk/umbrello/; revision=901256

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -78,7 +78,7 @@
     <Action name="class_wizard"/>
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="mainToolBar" fullWidth="true" newline="true">
   <Action name="popup_zoom"/>
   <Action name="zoom100"/>
 </ToolBar>
