--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -30,6 +30,8 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/tcl/
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/xml/
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenwizard/
+  ${CMAKE_CURRENT_SOURCE_DIR}/controller/
+  ${CMAKE_CURRENT_SOURCE_DIR}/widgets/
   ${Boost_INCLUDE_DIR}
 )
 
@@ -294,77 +296,87 @@ set(libcmds_SRCS
     cmds/widget/cmd_changeMulti.cpp
 )
 
+set (libwidgets_SRCS
+    widgets/activitywidget.cpp
+    widgets/actorwidget.cpp
+    widgets/artifactwidget.cpp
+    widgets/associationwidget.cpp
+    widgets/boxwidget.cpp
+    widgets/categorywidget.cpp
+    widgets/classifierwidget.cpp
+    widgets/combinedfragmentwidget.cpp
+    widgets/componentwidget.cpp
+    widgets/datatypewidget.cpp
+    widgets/entitywidget.cpp
+    widgets/enumwidget.cpp
+    widgets/floatingdashlinewidget.cpp
+    widgets/floatingtextwidget.cpp
+    widgets/forkjoinwidget.cpp
+    widgets/linkwidget.cpp
+    widgets/messagewidget.cpp
+    widgets/nodewidget.cpp
+    widgets/notewidget.cpp
+    widgets/objectnodewidget.cpp
+    widgets/objectwidget.cpp
+    widgets/packagewidget.cpp
+    widgets/pinwidget.cpp
+    widgets/preconditionwidget.cpp
+    widgets/regionwidget.cpp
+    widgets/seqlinewidget.cpp
+    widgets/signalwidget.cpp
+    widgets/statewidget.cpp
+    widgets/toolbarstateonewidget.cpp
+    widgets/umlwidget.cpp
+    widgets/usecasewidget.cpp
+)
+
+set (libcontroller_SRCS
+    controller/floatingtextwidgetcontroller.cpp
+    controller/messagewidgetcontroller.cpp
+    controller/notewidgetcontroller.cpp
+    controller/objectwidgetcontroller.cpp
+    controller/umlwidgetcontroller.cpp
+)
+
 ########### next target ###############
 
 set(libumbrello_SRCS
-    activitywidget.cpp
     actor.cpp
-    actorwidget.cpp
     artifact.cpp
-    artifactwidget.cpp
     association.cpp
-    associationwidget.cpp
     assocrules.cpp
     attribute.cpp
-    boxwidget.cpp
     category.cpp
-    categorywidget.cpp
     checkconstraint.cpp
     classifier.cpp
     classifiercodedocument.cpp
     classifierlistitem.cpp
-    classifierwidget.cpp
     cmdlineexportallviewsevent.cpp
     codeaccessormethod.cpp
-    combinedfragmentwidget.cpp
     component.cpp
-    componentwidget.cpp
-    datatypewidget.cpp
     dialog_utils.cpp
     docwindow.cpp
     entity.cpp
     entityattribute.cpp
     entityconstraint.cpp
-    entitywidget.cpp
-    regionwidget.cpp
     enum.cpp
     enumliteral.cpp
-    enumwidget.cpp
-    floatingdashlinewidget.cpp
-    floatingtextwidget.cpp
-    floatingtextwidgetcontroller.cpp
     folder.cpp
     foreignkeyconstraint.cpp
-    forkjoinwidget.cpp
     icon_utils.cpp
     import_rose.cpp
     kplayerslideraction.cpp
     linepath.cpp
-    linkwidget.cpp
     listpopupmenu.cpp
     main.cpp
-    messagewidget.cpp
-    messagewidgetcontroller.cpp
     model_utils.cpp
     node.cpp
-    nodewidget.cpp
-    notewidget.cpp
-    notewidgetcontroller.cpp
-    objectnodewidget.cpp
-    objectwidget.cpp
-    objectwidgetcontroller.cpp
     object_factory.cpp
     operation.cpp
     optionstate.cpp
     package.cpp
-    packagewidget.cpp
     petalnode.cpp
     petaltree2uml.cpp
-    pinwidget.cpp
-    preconditionwidget.cpp
-    seqlinewidget.cpp
-    statewidget.cpp
-    signalwidget.cpp
     stereotype.cpp
     template.cpp
     toolbarstate.cpp
@@ -372,16 +384,15 @@ set(libumbrello_SRCS
     toolbarstateassociation.cpp
     toolbarstatefactory.cpp
     toolbarstatemessages.cpp
-    toolbarstateonewidget.cpp
     toolbarstateother.cpp
     toolbarstatepool.cpp
     uml.cpp
     umlattributelist.cpp
-    umlentityattributelist.cpp
-    umlentityconstraintlist.cpp
     umlcanvasobject.cpp
     umlclassifierlistitemlist.cpp
     umldoc.cpp
+    umlentityattributelist.cpp
+    umlentityconstraintlist.cpp
     umllistview.cpp
     umllistviewitem.cpp
     umlnamespace.cpp
@@ -393,15 +404,12 @@ set(libumbrello_SRCS
     umlviewimageexporter.cpp
     umlviewimageexporterall.cpp
     umlviewimageexportermodel.cpp
-    umlwidget.cpp
-    umlwidgetcontroller.cpp
-    uniqueid.cpp
     uniqueconstraint.cpp
+    uniqueid.cpp
     usecase.cpp
-    usecasewidget.cpp
-    widgetbase.cpp
     widget_factory.cpp
     widget_utils.cpp
+    widgetbase.cpp
     worktoolbar.cpp
 )
 
@@ -409,6 +417,7 @@ kde4_add_kcfg_files(umbrello_SRCS umbrellosettings.kcfgc)
 
 set (umbrello_SRCS
     ${umbrello_SRCS}
+    ${libcontroller_SRCS}
     ${libdialogs_SRCS}
     ${librefactoring_SRCS}
     ${libcodegenwizard_SRCS}
@@ -419,6 +428,7 @@ set (umbrello_SRCS
     ${libcodegenerator_SRCS}
     ${libdocgenerator_SRCS}
     ${libcmds_SRCS}
+    ${libwidgets_SRCS}
     ${libumbrello_SRCS}
 )
 
