forgot to merge in additional directories to the include_directories statement
svn path=/branches/work/soc-umbrello/; revision=918626

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -30,6 +30,8 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/tcl/
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenerators/xml/
   ${CMAKE_CURRENT_SOURCE_DIR}/codegenwizard/
+  ${CMAKE_CURRENT_SOURCE_DIR}/controller/
+  ${CMAKE_CURRENT_SOURCE_DIR}/widgets/
   ${Boost_INCLUDE_DIR}
 )
 
