SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=931778

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -25,7 +25,7 @@ GenericName[eu]=UML modelatzailea
 GenericName[fa]=مدل‌ساز UML
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
-GenericName[ga]=Múnlóir UML
+GenericName[ga]=Samhaltóir UML
 GenericName[gl]=Modelador de UML
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
