Initial code for AssociationWidgetManager class which will manage a widget's associations' geometrical properties.
OT: First progress with Season of KDE. Yay!!


svn path=/branches/work/soc-umbrello/; revision=961180

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -351,6 +351,7 @@ set(libumbrello_SRCS
     actor.cpp
     artifact.cpp
     association.cpp
+    associationwidgetmanager.cpp
     assocrules.cpp
     attribute.cpp
     category.cpp
