SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdesdk/umbrello/; revision=976598

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -45,7 +45,7 @@ GenericName[pt_BR]=Modelador de UML
 GenericName[ro]=Modelator UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
-GenericName[sl]=Mofdelirnik UML
+GenericName[sl]=Modelirnik UML
 GenericName[sr]=УМЛ моделар
 GenericName[sr@latin]=UML modelar
 GenericName[sv]=UML-modellering
