--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -433,7 +433,7 @@ set (umbrello_SRCS
     ${libumbrello_SRCS}
 )
 
-kde4_add_app_icon(umbrello_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/hi*-app-umbrello.png")
+kde4_add_app_icon(umbrello_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/pics/hi*-app-umbrello.png")
 kde4_add_executable(umbrello ${umbrello_SRCS})
 target_link_libraries(umbrello  ${KDE4_KFILE_LIBS} ${KDE4_KDE3SUPPORT_LIBS} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES} ${LIBUUID} )
 install(TARGETS umbrello ${INSTALL_TARGETS_DEFAULT_ARGS} )
